--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+body {font-family: "helvetica";
+  text-align: center;}
+
+h1 {margin-top: 100px;
+  margin-bottom:50px;}
+
+input {margin-top: 40px;}
